--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 .DS_Store
 dataset
+dataset.zip
+dataset_all.zip
 
 # other files
 pytorch_yolov3
 
-# 20220303 stop
-config
+# 20220311 stop
 yolov3
 weights
+train_output
